--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -13,8 +13,10 @@
     "@babel/preset-env": "^7.1.0",
     "babelify": "^10.0.0",
     "grunt": "^1.0.3",
+    "http-server": "^0.11.1",
     "grunt-bg-shell": "^2.3.3",
     "grunt-browserify": "^5.3.0",
+    "grunt-cli": "^1.3.2",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^21.0.0",
     "grunt-http-server": "^2.1.0",
